--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -214,7 +214,7 @@
               <div class="card" style="width: 13rem;">
                 <a href="/pages/404.html">
                   <img
-                    src="/img/thumbnail/drama/quédateamilado.jpeg"
+                    src="/img/thumbnail/drama/quedateamilado.jpeg"
                     class="card-img-top" alt="..."></a>
               </div>
             </div>
@@ -284,7 +284,7 @@
               <div class="card" style="width: 13rem;">
                 <a href="/pages/404.html">
                   <img
-                    src="/img/thumbnail/comedia/vamosalacárcel.jpeg"
+                    src="/img/thumbnail/comedia/vamosalacarcel.jpeg"
                     class="card-img-top" alt="..."></a>
               </div>
             </div>
@@ -294,7 +294,7 @@
               <div class="card" style="width: 13rem;">
                 <a href="/pages/404.html">
                   <img
-                    src="/img/thumbnail/comedia/guerradepapás2.jpeg"
+                    src="/img/thumbnail/comedia/guerradepapas2.jpeg"
                     class="card-img-top" alt="..."></a>
               </div>
             </div>
