--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <main>
 
 
-    <section>
+      <section>
 
 
 
@@ -91,13 +91,23 @@
           class="img-fluid" style="height: 600px;">
         <div class="hero-vignette vignette-layer"></div>
         <div class="card-img-overlay">
-          <div class="card-body container-fluid cardBody">
-            <img height="150px"
-              src="/img/logo/elninoconelpijamaderayas.png">
-            <p class="card-text fs-6">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño que vive del otro lado de la cerca, sin saber que es un prisionero judío.</p>
-            <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn colorButton btn-lg">Reproducir <i class="bi bi-play-fill"></i></a>
-            <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn text-dark ms-4 whiteButton btn-lg">Más información <i
-                class="bi bi-info-circle"></i></a>
+          <div class="card-body container-fluid mt-5">
+
+            <div class="container text-center">
+              <div class="row">
+                <div class="col">
+                  <img height="150px" src="/img/logo/elninoconelpijamaderayas.png">
+                  <p class="card-text fs-6">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño
+                    que vive del otro lado de la cerca, sin saber que es un prisionero judío.</p>
+                  <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn colorButton btn-lg">Reproducir <i
+                      class="bi bi-play-fill"></i></a>
+                  <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn text-dark ms-4 whiteButton btn-lg">Más
+                    información <i class="bi bi-info-circle"></i></a>
+                </div>
+                <div class="col"> 
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
