--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <div class="card-img-overlay">
           <div class="card-body container-fluid mt-5">
 
-            <div class="container text-center">
+            <div class="container text-center mt-5">
               <div class="row">
                 <div class="col">
                   <img height="150px" src="/img/logo/elninoconelpijamaderayas.png">
-                  <p class="card-text fs-6">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño
+                  <p class="card-text fs-5 mt-3">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño
                     que vive del otro lado de la cerca, sin saber que es un prisionero judío.</p>
                   <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn colorButton btn-lg">Reproducir <i
                       class="bi bi-play-fill"></i></a>
