--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -44,7 +44,7 @@
                 aria-expanded="false">Categorias</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/pages/category/drama.html">Drama</a></li>
-                <li><a class="dropdown-item" href="#comedia">Comedia</a></li>
+                <li><a class="dropdown-item" href="/pages/category/comedia.html">Comedia</a></li>
                 <li><a class="dropdown-item" href="/pages/category/terror.html">Terror</a></li>
               </ul>
             </li>
@@ -80,29 +80,32 @@
 
   <main>
 
-
     <section>
-
-
-
-
       <div class="card text-bg-dark">
-        
         <video src="https://www.dropbox.com/s/k3xzpzc4iciwzqo/elninoconelpijamaderayas.mp4?dl=1#t=90" style="width: 100%; height: 600px; object-fit: cover;" autoplay playsinline muted></video>
         <div class="hero-vignette vignette-layer"></div>
         <div class="card-img-overlay">
-          <div class="card-body container-fluid cardBody">
-            <img src="/img/logo/elninoconelpijamaderayas.png" style="height: 150px;"><p class="card-text fs-6">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño que vive del otro lado de la cerca, sin saber que es un prisionero judío.</p>
+          <div class="card-body container-fluid mt-5">
 
-            <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn colorButton btn-lg">Reproducir <i class="bi bi-play-fill"></i></a>
-            <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn text-dark ms-4 whiteButton btn-lg">Más información <i class="bi bi-info-circle"></i></a>
+            <div class="container text-center mt-3">
+              <div class="row">
+                <div class="col">
+                  <img height="150px" src="/img/logo/elninoconelpijamaderayas.png">
+                  <p class="card-text fs-5 mt-3">Cuando su familia se muda de Berlín a Polonia, un niño se hace amigo de otro niño que vive del otro lado de la cerca, sin saber que es un prisionero judío.</p>
+                  <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn colorButton btn-lg">Reproducir <i
+                      class="bi bi-play-fill"></i></a>
+                  <a href="/pages/peliculas/elninoconelpijamaderayas.html" class="btn text-dark ms-4 whiteButton btn-lg">Más
+                    información <i class="bi bi-info-circle"></i></a>
+                </div>
+                <div class="col"> 
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
-
-
     </section>
+   
 
     <section>
       <div class="container">
